# draft

./: CLAUDE.md  README.md  openapi.yaml  renovate.json
.github/workflows/: itx-testing-in-pytest.yml  itx-testing-in-vitest.yml  itx-testing.yml
integration-tests/: docker-compose.yml
integration-tests/docker/: elasticmq.conf  rabbitmq-definitions.json
integration-tests/pytest/: pyproject.toml
integration-tests/vitest/: .prettierignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
itx-go/: Makefile  go.work.sum
itx-go/itx-backend/: go.mod  go.sum
itx-go/itx-impl/: go.mod  go.sum
itx-go/itx-worker/: go.mod  go.sum
itx-java/: .gitignore  Makefile  build.gradle.kts  gradle.properties  settings.gradle.kts
itx-java/buildSrc/: build.gradle.kts
itx-java/gradle/: libs.versions.toml
itx-java/itx-backend/: build.gradle.kts
itx-kt/: build.gradle.kts  gradle.properties  settings.gradle.kts
itx-rs/itx-impl/: Cargo.toml
itx-rs/itx-impl/src/: lib.rs
itx-rs/itx-impl/src/email/: mod.rs
itx-rs/itx-impl/src/queue/: mod.rs
itx-rs/itx-impl/src/queue/rabbitmq/: factory.rs  mod.rs
itx-rs/itx-impl/src/queue/sqs/: factory.rs  mod.rs
itx-rs/itx-impl/src/repo/mariadb/: factory.rs  mod.rs  post.rs  subscription.rs
itx-rs/itx-impl/src/repo/postgres/: factory.rs  mod.rs  post.rs  subscription.rs
itx-rs/itx-worker/: Cargo.toml
itx-rs/itx-worker/src/: lib.rs  run.rs
itx-rs/itx-worker/src/compute/: dispatcher.rs  state.rs
itx-rs/itx-worker/src/control/: dispatcher.rs  state.rs
itx-ts/: package-lock.json  package.json  tsconfig.json
(+295 files in other folders)
