[package]
name = "itx-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
envy = "0.4.2"
futures-util = "0.3"
lapin = "3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "uuid", "time"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

itx-contract = { path = "../itx-contract" }
