[package]
name = "itx-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "itx-control-worker"
path = "src/bin/itx-control-worker.rs"

[[bin]]
name = "itx-compute-worker"
path = "src/bin/itx-compute-worker.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

itx-contract = { path = "../itx-contract" }
itx-impl = { path = "../itx-impl" }
